# cmakeSample

./: .gitignore  CMakeLists.txt  main.cpp  utils.cpp  utils.h
cmake/Templates/: Custom.cmake  FindFFMPEG.cmake
codec/: CMakeLists.txt  codec.h
jni/: .sample_jni.cpp.swp  CMakeLists.txt  sample_jni.cpp  sample_jni.h
prebuild/: README.txt
src/: codec.cpp
