cmake_minimum_required(VERSION 2.8)
PROJECT(sample)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Templates/")

FIND_PACKAGE(Qt4 REQUIRED QtCore QtGui)
set(CMAKE_AUTOMOC ON)

INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/inc)

find_package(FFMPEG) 

INCLUDE_DIRECTORIES(${FFMPEG_INCLUDE_DIR})

file(GLOB XSOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

MESSAGE(STATUS "XSOURCE PATH IS ${XSOURCE}")

ADD_EXECUTABLE(sample ${XSOURCE})

TARGET_LINK_LIBRARIES(sample ${QT_LIBRARIES})
TARGET_LINK_LIBRARIES(sample ${FFMPEG_LIBRARIES})
