cmake_minimum_required(VERSION 2.8)
set(LIBNAME jni_codec)
find_package(JNI)

INCLUDE_DIRECTORIES(${JNI_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH})

file(GLOB JNICODEC "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
file(GLOB JNICODE_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
add_current_dir_libraries(${LIBNAME} ${JNICODEC} ${JNICODE_HEADERS})
TARGET_LINK_LIBRARIES(jni_codec_static ${FFMPEG_LIBRARIES})
TARGET_LINK_LIBRARIES(jni_codec_shared ${FFMPEG_SHARED_LIBRARIES})

